2005-11-10  Ankit Jain  <jankit@novell.com>

	* get.c (init_key_table): Add keyword - uint.

2005-11-08  Ankit Jain  <jankit@novell.com>

	* dump.c (dump_table_method): Get the type/method context required for parsing
	  method signature and dis_stringify'ing it.

2005-11-08  Ankit Jain  <jankit@novell.com>

	* get.c (init_key_table): Add keywords - callconv and flags.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* dis_stringify_method_signature: Add detail for 'returns:' in the comment.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* tests: Add new directory for test cases.

2005-10-28  Ankit Jain  <jankit@novell.com>

	* get.c (dis_stringify_method_signature): Use context instead of container
	  as container can be NULL.

2005-10-20  Ankit Jain  <jankit@novell.com>

	* get.c (get_method_core): Use the parent context for get_methodspec
	  instead of the inflated method's context.
	  (get_methodspec): Get the context for the generic method.
	  Use parent_context for getting the method's type parameters. 

2005-10-20  Ankit Jain  <jankit@novell.com>

	* main.c (dis_method_list): Oops. Check method_context for null.

2005-10-19  Ankit Jain  <jankit@novell.com>

	* main.c (dis_method_list): Fix warning introduced by my last patch.

2005-10-19  Ankit Jain  <jankit@novell.com>

	* main.c (dis_method_list): Use 'method_context' instead of 'container' for 
	  mono_metadata_parse_method_signature_full.

2005-10-02  Zoltan Varga  <vargaz@freemail.hu>

	* get.h get.c main.c: Fix some warnings and bugs.

2005-09-20  Ankit Jain  <jankit@novell.com>

	* monodis.1: Update documentation for --output.

2005-09-20  Ankit Jain  <jankit@novell.com>

	* main.c (table_list): Add --mresources to the table.
	  (usage): Don't add "--mresources" explicitly for usage output.
	  (main): Remove explicit handling for --mresources.

2005-09-20  Ankit Jain  <jankit@novell.com>

	* main.c (main): Dump managed resources when --output is specified.

2005-09-08  Ankit Jain  <jankit@novell.com>
